implement trigger handler logic

--- a/force-app/main/default/classes/CAMPXEventTriggerHandler.cls
+++ b/force-app/main/default/classes/CAMPXEventTriggerHandler.cls
@@ -1,5 +1,10 @@
-public with sharing class CAMPXEventTriggerHandler {
-    public CAMPXEventTriggerHandler() {
-
+public with sharing class CAMPXEventTriggerHandler 
+{
+    public void setStatusToPlanning(List<CAMPX__Event__c> eventList) 
+    {
+        for (CAMPX__Event__c eventRecord : eventList) 
+        {
+            eventRecord.CAMPX__Status__c = 'Planning';
+        }
     }
 }
