implement capture event status change logic in the handler class

--- a/force-app/main/default/classes/CAMPXEventTriggerHandler.cls
+++ b/force-app/main/default/classes/CAMPXEventTriggerHandler.cls
@@ -7,4 +7,15 @@ public with sharing class CAMPXEventTriggerHandler
             eventRecord.CAMPX__Status__c = 'Planning';
         }
     }
+
+    public void recordStatusChange(List<CAMPX__Event__c> newList, List<CAMPX__Event__c> oldList) 
+    {
+        for (CAMPX__Event__c eventRecord : newList) 
+        {
+            if(eventRecord.CAMPX__Status__c != oldList[0].CAMPX__Status__c)
+            {
+                eventRecord. CAMPX__StatusChangeDate__c = System.now();
+            }
+        }
+    }
 }
