add a handler method for the email validation

--- a/force-app/main/default/classes/CAMPXSponsorTriggerHandler.cls
+++ b/force-app/main/default/classes/CAMPXSponsorTriggerHandler.cls
@@ -7,4 +7,15 @@ public with sharing class CAMPXSponsorTriggerHandler
             sponsorRecord.CAMPX__Status__c = sponsorRecord.CAMPX__Status__c ?? 'Pending';
         }
     }
+
+    public void validateEmail(List<CAMPX__Sponsor__c> sponsorList) 
+    {
+        for (CAMPX__Sponsor__c sponsorRecord : sponsorList) 
+        {
+            if (sponsorRecord.CAMPX__Email__c == null || String.isBlank(sponsorRecord.CAMPX__Email__c)) 
+            {
+                sponsorRecord.addError('A sponsor can not be created without an email address');
+            }
+        }
+    }
 }
