add status validator method

--- a/force-app/main/default/classes/CAMPXSponsorTriggerHandler.cls
+++ b/force-app/main/default/classes/CAMPXSponsorTriggerHandler.cls
@@ -43,4 +43,17 @@ public with sharing class CAMPXSponsorTriggerHandler
             }
         }
     }
+
+    public void validateStatusAndEvent(List<CAMPX__Sponsor__c> sponsorList) 
+    {
+        for (CAMPX__Sponsor__c sponsorRecord : sponsorList) 
+        {
+            if (sponsorRecord.CAMPX__Status__c == 'Accepted' && 
+                (String.isBlank(sponsorList.CAMPX__Event__c)
+                || sponsorList.CAMPX__Event__c == NULL)) 
+            {
+                sponsorRecord.addError('A Sponsor must be associated with an event before being Accepted.');
+            }
+        }
+    }
 }
